syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.simplexportal.spatial.api.grpc";

package com.simplexportal.spatial.api.grpc;

service DataService {
    rpc AddNode (AddNodeCmd) returns (ACK);
    rpc AddWay (AddWayCmd) returns (ACK);
    rpc StreamBatchCommands (stream ExecuteBatchCmd) returns (stream ACK);
    rpc GetMetrics (GetMetricsCmd) returns (Metrics);
    rpc SearchNearestNode (SearchNearestNodeCmd) returns (NearestNodeReply);
}

message ACK {
    oneof ACKValue {
        Done done = 1;
        NotDone notDone = 2;
    }
}

message Done {
}

message NotDone {
    string clue = 1;
}

message AddNodeCmd {
    uint64 id = 1;
    double lon = 2;
    double lat = 3;
    map<string, string> attributes = 4;
}

message AddWayCmd {
    uint64 id = 1;
    repeated uint64 nodeIds = 2;
    map<string, string> attributes = 3;
}

message ExecuteCmd {
    oneof Command {
        AddNodeCmd node = 1;
        AddWayCmd way = 2;
    }
}

message ExecuteBatchCmd {
    repeated ExecuteCmd commands = 1;
}

message GetMetricsCmd {
}

message Metrics {
    uint64 ways = 1;
    uint64 nodes = 2;
}

message SearchNearestNodeCmd {
    double lon = 1;
    double lat = 2;
}

message NearestNodeReply {
    oneof ACK {
        NearestNode done = 1;
        NotDone notDone = 2;
    }
}

message NearestNode {
    repeated Node nodes = 1;
}

message Node {
    uint64 id = 1;
    double lon = 2;
    double lat = 3;
    map<string, string> attributes = 4;
}

message Way {
    uint64 id = 1;
    repeated Node nodes = 2;
    map<string, string> attributes = 3;
}

